tests/type_condition.expected
tests/type_condition.mira:2:5: error: if condition must be bool, got int
