tests/type_condition.mira
fn main(): void {
    if (1) { print(1); }
}
